IDE integration note